--- a/server/.env.example
+++ b/server/.env.example
@@ -8,3 +8,12 @@ LASTFM_API_KEY=api_key
 
 # Optional: Default LastFM username
 DEFAULT_LASTFM_USERNAME=username_here
+
+# Discord API Configuration
+# Get a Discord bot token from https://discord.com/developers/applications
+# Create a new application, go to Bot section, and copy the token
+DISCORD_BOT_TOKEN=discord_bot_token_here
+
+# Your Discord user ID (right-click your profile in Discord -> Copy User ID)
+# Note: You need Developer Mode enabled in Discord settings to see this option
+DISCORD_USER_ID=your_discord_user_id_here
