--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ node_modules
 dist
 dist-ssr
 *.local
+.github/copilot-instructions.md
 
 # Editor directories and files
 .vscode/*
@@ -22,4 +23,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-!.github/copilot-instructions.md
+
